# local-graphrag-mcp

./: .mcp.json.example  CLAUDE.md  README.md  TENTATIVE_README.md  concept.md  pyproject.toml
local_graphrag_mcp/: __init__.py  __main__.py  cli.py  colors.py  entity_extractor.py  progress.py  server.py
local_graphrag_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_document_parser.py  test_standalone.py
